style.css
/* general */
html, body {
    font-family: 'Merriweather', serif;
    margin: 0;
    padding: 0;
    text-align: center;
}

body {
    align-items: center;
    background-color: #EDECEC;
    color: black;
    display: flex;
    flex-flow: column wrap;
    justify-content: center;
}

header {
    background-color: #33393D;
    display: flex;
    flex-direction: column;
    padding: 10px;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
    width: 100%;
}

header img {
    max-width: 40%;
    /* padding: 5px; */
}
/* text inside next buttons */
a {
    text-decoration: none;
    color: white;
}

button {
    border: none;
    background-color: #00274C;
    border-radius: 25px;
    box-shadow: 0 0 5px#000;    
    color: white;
    height: 40px;
    font-weight: bold;
    padding: 10px 20px;
    text-transform: uppercase;
    width: 150px;
}

/* headers */
h2, h3 {
    margin: 50px 5px 5px 5px;
 }

h1 {
    color: white;
    font-family: 'Unica One', cursive;
    font-size: calc(16px + 3vw);
    padding: 10px;
    margin: 0;
}

h2 {
    font-size: calc(14px + 2vw);
}

h3 {
    font-size: calc(12px + 1vw);
    margin: 5px 5px 15px 5px;
}

h4 {
    text-transform: uppercase;
    font-size: calc(10px + 1vw);
    margin-bottom: 5px; 
}

input {
    border: none;
    border-radius: 25px;
    box-shadow: 0 0 10px#282828;
    padding: 10px 20px;
    text-align: center;
}

p {
    font-weight: bold;
}

form div {
    display: flex;
    flex-direction: column;
}

select {
    border: none;
    background-color: #33393D;
    color: white;
    border-radius: 25px;
    padding: 3px;
    margin: 5px;
    box-shadow: 0 0 5px#000;
}

.next {
    display: none;
    margin: 15px;
}

.space {
    display: none;   
    height: 150px; 
    margin: 100px 0 200px 0;
    
}

/* https://www.w3schools.com/css/css_overflow.asp */
/* list of search results */
.results {
    display: flex;
    flex-flow: row wrap;
    justify-content: center;
    margin-top: 10px;
    max-height: 450px;
    overflow-y: scroll;
    width: 80%;
}

.result-item {
    align-items: center;
    background-color: white;
    border-radius: 25px;
    box-shadow: 0 0 5px#000;
    color: black;
    display: flex;
    flex-flow: row nowrap;
    height: auto;
    padding: 10px;
    margin: 5px 5px 5px 5px;
    text-align: left;
    width: 100%;
}

/* words inside each result */
.text {
    margin-left: 3%;
    width: 100%;
}

/* icon side result */
.icon {
    height: 50px;
    width: 50px;
}

.icon:hover, .delete:hover {
    opacity: 0.5
}

.delete {
    width: 35px;
    height: 35px;
    align-self: flex-end;
}

.thumbnail {
    height: auto;
    width: 20%;
}

/* custom list */
.list {
    width: 100%;
    margin: 10px 0 10px 0;
}

.added {
    align-items: center;
    background-color: white;
    border-radius: 25px;
    box-shadow: 0 0 5px#000;
    display: flex;
    flex-direction: column;
    margin: 10px 0 10px 0; 
    padding: 10px;
}

.carb-amount {
    font-weight: bold;
}

.added p {
    margin: 0;
    padding: 5px
}

.total-carbs {
    align-items: center;
    background-color: #FFCB05;
    border-radius: 25px;
    color: black;
    display: flex;
    font-weight: bold;
    height: 50px;
    justify-content: center;
    margin: 5px auto;
    width: 80%;
}

.insulin {
    align-items: flex-end;
    display: flex;
    flex-direction: column;
    width: 35%;
}

.insulin p {
    background-color: white;
    border-radius: 25px;
    color: black;
    font-weight: 300;
    margin: 5px 5px 5px 0px;
    padding: 7px 20px;
    text-align: center;
    width: 15px;

}

.carbo {
    align-items: flex-start;
    display: flex;
    flex-direction: column;
    width: 65%;
}

#main {
    margin-top: 50px;
}

#one {
    display: none;
    width: 100%;
}

#two {
    display: none;
}

#search-section {
    display: flex;
    flex-flow: column nowrap;
    align-items: center;
}

#search {
    margin: 5px 0 5px 0;
}

#custom-list {
    color: black;
    margin: 0 auto;
    width: 80%;
}

#insulin-to-carb {
    width: 80%;
    display: flex;
    flex-flow: row wrap;
    height: 150px;
    justify-content: center;
    margin: 0 auto;
}

#qty[type="number"]{
    margin: 10px 0 10px 0;
}

#carb[type=number]{
    margin: 5px 0 5px 0;
    text-align: center;
}

#submit {
    margin: 15px;
}

#calculate {
    margin-top: 15px;
}

#units {
    margin: 0 auto;
    width: 80%;
}

#units div {
    align-items: center;
    background-color: #FFCB05;
    border-radius: 25px;
    color: black;
    display: flex;
    font-weight: bold;
    height: 50px;
    justify-content: center;
}

@media only screen and (min-width: 600px) {
    .space {
        display: block;    
    }

    button {
        box-shadow: none;
    }

    button:hover {
        box-shadow: 0 0 5px#000;
    }

    input {
        border: 1px solid gray;
        box-shadow: none;
    }

    input:hover {
        box-shadow: 0 0 10px#282828;
    }

    .result-item {
        height: 100px;
    }

    .thumbnail {
        max-height: 100px;
        width: auto;
    }

    .next {
        margin-bottom: 100px;
    }

    /* .added {
        flex-flow: row nowrap;
        justify-content: flex-start;
        padding-left: 5%;
    } */

    .insulin {
        width: 45%;
    }

    .carbo {
        width: 55%;
    }

    #submit {
        margin-bottom: 100px;
    }

    #two {
        width: 100%;
    }

    #qty[type="number"] {
        margin: 0 5px 0 5px;
    }
    
}

